hphp/hack/test/typecheck/tconst/abstract_final_tconst.php.exp
File "abstract_final_tconst.php", line 7, characters 23-23:
Type constant `T` is abstract but the class is final. Either provide an implementation here. (Typing[4465])
  File "abstract_final_tconst.php", line 6, characters 22-22:
  Or make the class abstract and not final.
